<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidCPG</string>
    <string name="title_activity_albums">Albums</string>
    <string name="select_album">Select Album</string>
    <string name="action_settings">Settings</string>
    <string name="uploadphoto">Upload Photo</string>
    <string name="uploadphotos">Upload %d Photos</string>
    <string name="uploadvideo">Upload Video</string>
    <string name="uploadyoutube">Upload Youtube Video</string>
    <string name="uploadvimeo">Upload Vimeo Video</string>
    <string name="uploadvine">Upload Vine Video</string>
    <string name="uploadvideos">Upload %d Videos</string>
    <string name="uploadfiles">Upload %d Files</string>
    <string name="newalbum">Create new album</string>
    <string name="title_activity_send_share">AndroidCPG</string>
    <string name="successuploading">%s uploaded correctly</string>
    <string name="faileduploading">%s failed uploading</string>
    <string name="successuploading_title">Uploaded correctly</string>
    <string name="faileduploading_title">Failed uploading</string>
    <string name="successaddingalbum">Album added successfully</string>
    <string name="failedaddingalbum">Failed adding album</string>
    <string name="addnewalbum">Album name</string>
    <string name="wait_a_few">Wait!</string>
    <string name="loginsuccess">Logged In!</string>
    <string name="loginfailed">Wrong username or password!</string>

    <string name="hostcorrect">Host is OK!</string>
    <string name="hostnotcorrect">Error connecting host!</string>
    <string name="hostnotcorrect_nocoppermine">Host doesn\'t contain a Coppermine Gallery!</string>
    <string name="hostnotcorrect_noplugin">This Coppermine Gallery is missing AndroidCPG plugin. Contact the administrator to install it!</string>

    <string name="uploads_in_progress_skipping_new_ones">Uploads are in progress, Wait until they finish for uploading more!</string>
    <string name="uploads_in_progress_login_not_allowed">Uploads are in progress, Wait until they finish for Login In!</string>

    <string name="upload">Upload</string>
    <string name="uploading">Uploading</string>
    <string name="uploadprogressnotification">%1$s - %2$d%% uploaded</string>
    <string name="nouploads">Nothing to upload.</string>
    <string name="finisheduploading">Done uploading!</string>
    <string name="finishednotificationdetails">Files: %1$d, Success: %2$d, Failed: %3$d</string>
    <string name="optionmenudeletecredentials">Delete Credentials</string>
    <string name="optionmenusettings">Preferences</string>
    <string name="optionmenuclose">Exit</string>
    
    <string name="settings_doublelogin_title">Double Login</string>
    <string name="settings_doublelogin_summary">Enable this if Login or Send Share activity fails to login at first try. (Cookie handler is buggy in some devices, Double Login might fix the problem)</string>
    
    <string name="webview_mode_button_code">Show source</string>
    <string name="webview_mode_button_html">Show html</string>
    
    <string name="webview_copy_button">Copy Text</string>
    <string name="action_show_result">Show Result</string>
    
    <string name="image_title">Image Title</string>
    <string name="image_caption">Image Caption</string>
    
    <string name="next_item">Next item</string>
    <string name="prev_item">Previous item</string>
    
    <string name="preview_not_available">Preview not available</string>
    
    <string name="title_activity_result">Uploads Result</string>
    <string name="no_upload_info">No result info.</string>
    
    <string name="no_albums_create_first">No albums, create first one.</string>
    <string name="no_albums_cant_create">You can\'t create albums. Contact gallery\'s admin</string>
</resources>

