<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/success_uploads_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/successuploading_title" />

            <ListView
                android:id="@+id/success_uploads"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/listviewbackground"
                android:scrollingCache="false"
                android:fadeScrollbars="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/failed_uploads_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faileduploading_title" />

            <ListView
                android:id="@+id/failed_uploads"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/listviewbackground"
                android:scrollingCache="false"
                android:fadeScrollbars="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/no_upload_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_upload_info"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/optionmenuclose"
        android:textColor="#000000"
        android:minWidth="100dp" />

</LinearLayout>